--- a/project/TargetMachine/backend/package.json
+++ b/project/TargetMachine/backend/package.json
@@ -10,9 +10,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.7",
+    "base-64": "^1.0.0",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "fs": "^0.0.1-security",
     "pg": "^8.13.0"
   }
 }
